
VERSION <HEAD>

    - Added bomb diarrhea bonus.
	
	- Added no bombs bonus.
	
	- Added maximum available range bonus.
	
	- Added immortality bonus.
	
	- Added speed-up and slow-down bonuses.
	
	- Added walking trough walls bonus. In addition after the bonus runs out for the player who is still inside a crate - the player dies. Player standing on a crate that just exploded does not die, the vanishing crate shields him against explosion.
 
	- Added walking through bombs bonus.
	
	- Added controller reverse disease.

	- Added random placing of crates on the board. 
	
	- Fixed several bugs.

VERSION 0.94

	- Corrected selection/ focus on score boards.

	- Added obfuscation/ trimming to the output JAR.

VERSION 0.93

	- Added support for OpenAL audio engine.

VERSION 0.92

	- Added persistent (.jdyna.xml in home folder) configuration.

	- Added sound engine configuration switch and support for Java Audio.

VERSION 0.91

    - Added random layout of crates ('~' brick).

    - Corrected links in the about section [Krzysztof Kaźmierczyk].

VERSION 0.9

    - Initial release